	the ioctls directly in the two places where we queue buffers.
	(gst_v4l2src_grab_frame): Return a flowreturn and fill the buffer
	directly.
	(gst_v4l2src_capture_init): Use the new buffer_pool_new function
	to allocate the pool, which also preallocates the GstBuffers.
	(gst_v4l2src_capture_start): Call buffer_pool_activate instead of
	queueing the frames directly.

	* sys/v4l2/gstv4l2src.h (struct _GstV4l2BufferPool): Make this a
	real MiniObject instead of rolling our own refcounting and
	finalizing. Give it a lock.
	(struct _GstV4l2Buffer): Remove one intermediary object, having
	the buffers hold the struct v4l2_buffer directly.

	* sys/v4l2/gstv4l2src.c (gst_v4l2src_set_caps): Pass the caps to
	capture_init so that it can set them on the buffers that it will
	create.
	(gst_v4l2src_get_read): For better or for worse, include the
	timestamping and offsetting code here; really we should be using
	bufferalloc though.
	(gst_v4l2src_get_mmap): Just make grab_frame return one of our
	preallocated, mmap'd buffers.

2007-06-11  Wim Taymans  <wim@fluendo.com>

	Patch by: daniel fischer <dan at f3c dot com>

	* sys/ximage/gstximagesrc.c: (gst_ximage_src_start),
	(gst_ximage_src_get_caps):
	Actually use the display_name property so that we can dump any
	available X display. Fixes #445905.

2007-06-11  Wim Taymans  <wim@fluendo.com>

	Patch by: Tommi Myöhänen  <ext-tommi dot myohanen at nokia dot com>

	* gst/rtp/gstrtppcmadepay.c: (gst_rtp_pcma_depay_setcaps):
	* gst/rtp/gstrtppcmudepay.c: (gst_rtp_pcmu_depay_setcaps):
	Add missing rate fields to caps. Fixes #441118.

2007-06-10  Sebastien Moutte  <sebastien@moutte.net>

	* win32/vs6/gst_plugins_good.dsw:
	* win32/vs8/gst-plugins-good.sln:
	Add DirectSound and DirectDraw sinks project files to
	workspace and solution files.

2007-06-10  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Josh Coalson <xflac at yahoo dot com>,
	updated by Alexis Ballier <aballier at gentoo dot org>:

	* configure.ac: